--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body1"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/html_css.jpg" alt="">
@@ -138,9 +138,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle1" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -154,7 +154,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body2"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/linux.jpg" alt="">
@@ -189,9 +189,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle2" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -205,7 +205,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body3"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-4">
         <img src="img/js_jquery.png" alt="">
@@ -240,9 +240,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle3" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -256,7 +256,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body4"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/vim.svg" alt="">
@@ -291,9 +291,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle4" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -307,7 +307,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body5"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/git.png" alt="">
@@ -342,9 +342,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle5" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -358,7 +358,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body6"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/logic.png" alt="">
@@ -392,9 +392,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle6" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -409,7 +409,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body7"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/python2.png" alt="">
@@ -443,9 +443,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle7" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -459,7 +459,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body8"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/postgresql2.png" alt="">
@@ -493,9 +493,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle8" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -510,7 +510,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body9"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/web_scraper.png" alt="">
@@ -544,9 +544,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle9" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -561,7 +561,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body10"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/flask2.png" alt="">
@@ -595,9 +595,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle10" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -612,7 +612,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body11"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-4">
         <img src="img/django.png" alt="">
@@ -646,9 +646,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle11" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -664,7 +664,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body12"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/heroku.png" alt="">
@@ -698,9 +698,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle12" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -715,7 +715,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body13"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/elm.png" alt="">
@@ -749,9 +749,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle13" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -766,7 +766,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body14"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/microservices.jpg" alt="">
@@ -800,9 +800,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle14" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -817,7 +817,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body15"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/integ_cont.jpg" alt="">
@@ -851,9 +851,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle15" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
@@ -868,7 +868,7 @@
     </h4>
   </div><!-- /HEAD PANEL -->
 
-  <div class="widget-body" id="widget-body16"> <!-- CONTENT PANEL -->
+  <div class="widget-body"> <!-- CONTENT PANEL -->
     <div class="row">
       <div class="col-md-3">
         <img src="img/iot.png" alt="">
@@ -902,9 +902,9 @@
       <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
       <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
       <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i id="toggle16" class="fa fa-chevron-up fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
     </div>
-  </div><!-- /FOOTER PANEL--> 
+  </div><!-- /FOOTER PANEL-->
 
 </div><!-- /TYPE PANEL -->
 
