--- a/index.html
+++ b/index.html
@@ -369,11 +369,11 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/logica-de-programacao.md" target="_blank">
           <span>Lógica de Programação</span></a>
         </h4>
-        <!-- <h5>
+        <h5>
           <i class="fa fa-meetup fa-2x"></i>
-          <a href="" target="_blank"> /17</a>
+          <a href="http://meetu.ps/38tVkZ" target="_blank"> 08/04/17</a>
         </h5>
-        <h4>
+        <!-- <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
         </h4> -->
@@ -383,8 +383,8 @@
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <!-- <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i> -->
+      <!-- <i class="fa fa-book"></i> -->
+      <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
