material de logica

--- a/index.html
+++ b/index.html
@@ -31,14 +31,6 @@
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('img/slides/logic.png');">
-                </div>
-                <div class="carousel-caption">
-                  <h1>Lógica de Programação</h1>
-                    <h2>08/04/17 na IBM</h2>
-                </div>
-            </div>
-            <div class="item">
                 <div class="fill" style="background-image:url('img/slides/python2.png');">
                 </div>
                 <div class="carousel-caption">
@@ -371,19 +363,20 @@
         </h4>
         <h5>
           <i class="fa fa-meetup fa-2x"></i>
-          <a href="http://meetu.ps/38tVkZ" target="_blank"> 08/04/17</a>
+          <a href="http://meetu.ps/38tVkZ" target="_blank"><i class="fa fa-check fa-2x"></i> 08/04/17</a>
         </h5>
-        <!-- <h4>
+        <h4>
           <i class="fa fa-book fa-2x"></i>
-          <a href="" target="_blank">Material</a>
-        </h4> -->
+          <a href="https://github.com/grupy-sp/encontros/blob/master/2017/fs2w/06-logica.md" target="_blank">Material</a>
+        </h4>
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <!-- <i class="fa fa-book"></i> -->
+      <i class="fa fa-book"></i>
+      <i class="fa fa-check fa"></i>
       <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
