--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                     <h2></h2>
                 </div>
             </div>
-            <div class="item">
+            <!-- <div class="item">
                 <div class="fill" style="background-image:url('img/slides/python2.png');">
                 </div>
                 <div class="carousel-caption">
                   <h1>Mutirão Python</h1>
                     <h2>Em breve</h2>
                 </div>
-            </div>
+            </div> -->
             <!-- <div class="item">
                 <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
                 <div class="carousel-caption">
@@ -410,14 +410,14 @@
       <div class="col-md-9">
         <h4>
           <i class="fa fa-github fa-2x"></i>
-          <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/LINK" target="_blank">
+          <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/mutirao-python.md" target="_blank">
           <span>Mutirão Python</span></a>
         </h4>
-        <!-- <h5>
+        <h5>
           <i class="fa fa-meetup fa-2x"></i>
-          <a href="" target="_blank"> /17</a>
+          <a href="https://www.meetup.com/pt-BR/Grupy-SP/events/239915770/" target="_blank"><i class="fa fa-check fa-2x"></i> 20/05/17</a>
         </h5>
-        <h4>
+        <!-- <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
         </h4> -->
@@ -427,8 +427,9 @@
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <!-- <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i> -->
+      <!-- <i class="fa fa-book"></i> -->
+      <i class="fa fa-check fa"></i>
+      <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
