--- a/index.html
+++ b/index.html
@@ -417,17 +417,17 @@
           <i class="fa fa-meetup fa-2x"></i>
           <a href="https://www.meetup.com/pt-BR/Grupy-SP/events/239915770/" target="_blank"><i class="fa fa-check fa-2x"></i> 20/05/17</a>
         </h5>
-        <!-- <h4>
+        <h4>
           <i class="fa fa-book fa-2x"></i>
-          <a href="" target="_blank">Material</a>
-        </h4> -->
+          <a href="https://github.com/rg3915/fs2w/blob/master/material/Grupy_PLSP_Interm_v2.pdf" target="_blank">Material</a>
+        </h4>
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <!-- <i class="fa fa-book"></i> -->
+      <i class="fa fa-book"></i>
       <i class="fa fa-check fa"></i>
       <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
