PostgreSQL on index

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                     <h2></h2>
                 </div>
             </div>
-            <!-- <div class="item">
-                <div class="fill" style="background-image:url('img/slides/python2.png');">
+            <div class="item">
+                <div class="fill" style="background-image:url('img/slides/postgresql2.png');">
                 </div>
                 <div class="carousel-caption">
-                  <h1>Mutirão Python</h1>
-                    <h2>Em breve</h2>
+                  <h1>PostgreSQL</h1>
+                    <h2>15/07/17</h2>
                 </div>
-            </div> -->
+            </div>
             <!-- <div class="item">
                 <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
                 <div class="carousel-caption">
@@ -464,11 +464,11 @@
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/introducao-ao-postgresql.md" target="_blank">
           <span>Introdução ao PostgreSQL</span></a>
         </h4>
-        <!-- <h5>
+        <h5>
           <i class="fa fa-meetup fa-2x"></i>
-          <a href="" target="_blank"> /17</a>
+          <a href="http://meetu.ps/3bBQPY" target="_blank"><i class="fa fa-check fa-2x"></i> 15/07/17</a>
         </h5>
-        <h4>
+        <!-- <h4>
           <i class="fa fa-book fa-2x"></i>
           <a href="" target="_blank">Material</a>
         </h4> -->
@@ -478,8 +478,8 @@
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <!-- <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i> -->
+      <!-- <i class="fa fa-book"></i> -->
+      <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
     <div class="gfa">
