material de PostgreSQL

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                     <h2></h2>
                 </div>
             </div>
-            <div class="item">
-                <div class="fill" style="background-image:url('img/slides/postgresql2.png');">
-                </div>
-                <div class="carousel-caption">
-                  <h1>PostgreSQL</h1>
-                    <h2>15/07/17</h2>
-                </div>
-            </div>
+            <!-- <div class="item">
+                            <div class="fill" style="background-image:url('img/slides/postgresql2.png');">
+                            </div>
+                            <div class="carousel-caption">
+                              <h1>PostgreSQL</h1>
+                                <h2>15/07/17</h2>
+                            </div>
+                        </div> -->
             <!-- <div class="item">
                 <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
                 <div class="carousel-caption">
@@ -468,17 +468,17 @@
           <i class="fa fa-meetup fa-2x"></i>
           <a href="http://meetu.ps/3bBQPY" target="_blank"><i class="fa fa-check fa-2x"></i> 15/07/17</a>
         </h5>
-        <!-- <h4>
+        <h4>
           <i class="fa fa-book fa-2x"></i>
-          <a href="" target="_blank">Material</a>
-        </h4> -->
+          <a href="https://github.com/juliano777/pgsql_fs2w" target="_blank">Material</a>
+        </h4>
       </div>
     </div>
   </div><!-- /CONTENT PANEL -->
 
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
-      <!-- <i class="fa fa-book"></i> -->
+      <i class="fa fa-book"></i>
       <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
