--- a/index.html
+++ b/index.html
@@ -30,14 +30,22 @@
                     <h2></h2>
                 </div>
             </div>
-            <!-- <div class="item">
-                            <div class="fill" style="background-image:url('img/slides/postgresql2.png');">
-                            </div>
-                            <div class="carousel-caption">
-                              <h1>PostgreSQL</h1>
-                                <h2>15/07/17</h2>
-                            </div>
-                        </div> -->
+            <div class="item">
+                <div class="fill" style="background-image:url('img/slides/flask.png');">
+                </div>
+                <div class="carousel-caption">
+                  <h1>Flask</h1>
+                    <h2>19/08/17</h2>
+                </div>
+            </div>
+            <div class="item">
+                <div class="fill" style="background-image:url('img/slides/django.png');">
+                </div>
+                <div class="carousel-caption">
+                  <h1>Django</h1>
+                    <h2>Em breve</h2>
+                </div>
+            </div>
             <!-- <div class="item">
                 <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
                 <div class="carousel-caption">
