Essential Mix link

--- a/index.html
+++ b/index.html
@@ -70,21 +70,27 @@
 <p class="lead">FS2W é uma série de workshops gratuitos sobre o desenvolvimento de aplicações web em Python. O objetivo é que ao final do programa você seja capaz de criar seu próprio projeto web do começo ao fim, e ainda deixar seu site no ar.</p>
 
 <div class="row">
-  <div class="col-md-4 col-sm-6 hero-feature">
+  <div class="col-md-6 col-sm-6 hero-feature">
       <div class="thumbnail">
         <iframe width="100%" src="https://www.youtube.com/embed/ka-7E02YBaE" frameborder="0" allowfullscreen></iframe>
       </div>
   </div>
 
-  <div class="col-md-4 col-sm-6 hero-feature">
+  <div class="col-md-6 col-sm-6 hero-feature">
       <div class="thumbnail">
         <iframe width="100%" src="https://www.youtube.com/embed/2_ycq6BbQw4" frameborder="0" allowfullscreen></iframe>
       </div>
   </div>
 
-  <div class="col-md-4 col-sm-6 hero-feature">
+  <div class="col-md-6 col-sm-6 hero-feature">
       <div class="thumbnail">
         <iframe width="100%" src="https://www.youtube.com/embed/T8KTf1VTvoE" frameborder="0" allowfullscreen></iframe>
+      </div>
+  </div>
+
+  <div class="col-md-6 col-sm-6 hero-feature">
+      <div class="thumbnail">
+        <a href="https://github.com/rg3915/fs2w/tree/fs2w_essential_mix" target="_blank"><img src="https://raw.githubusercontent.com/rg3915/fs2w/fs2w_essential_mix/img/essential_mix.jpg" alt="" height="100%"></a>
       </div>
   </div>
 </div>
@@ -92,6 +98,7 @@
 <p class="lead">Acompanhe o <img src="https://a248.e.akamai.net/secure.meetupstatic.com/photos/event/8/f/1/d/highres_454596637.jpeg" alt="" height="30px"> <a href="http://meetup.com/grupy-sp" target="_blank">Meetup.com/grupy-sp</a></p>
 
 <p class="lead">Sugestões em <span class="fa fa-github"></span> <a href="https://github.com/rg3915/fs2w" target="_blank">github.com/rg3915/fs2w</a></p>
+
 
 <!-- 01 HTML e CSS básico -->
 
@@ -487,6 +494,7 @@
   <div class="widget-footer"><!-- FOOTER PANEL-->
     <div class="lfooter">
       <i class="fa fa-book"></i>
+      <i class="fa fa-check fa"></i>
       <i class="fa fa-meetup"></i>
       <i class="fa fa-github"></i>
     </div>
