--- a/index.html
+++ b/index.html
@@ -509,6 +509,56 @@
 
 </div><!-- /TYPE PANEL -->
 
+<!-- 10 Flask -->
+
+<div class="widget widget-gray"> <!-- TYPE PANEL -->
+  <div class="widget-trigger widget-head btn-black" data-target-id="10"> <!-- HEAD PANEL -->
+    <h4 class="mytitle">
+      <img src="img/flask_logo.png" alt="" height="30px">
+      <span class="lead">Flask</span>
+    </h4>
+  </div><!-- /HEAD PANEL -->
+
+  <div class="widget-body"> <!-- CONTENT PANEL -->
+    <div class="row">
+      <div class="col-md-3">
+        <img src="img/flask2.png" alt="">
+      </div>
+      <div class="col-md-9">
+        <h4>
+          <i class="fa fa-github fa-2x"></i>
+          <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/flask.md" target="_blank">
+          <span>Flask</span></a>
+        </h4>
+        <h5>
+          <i class="fa fa-meetup fa-2x"></i>
+          <a href="https://www.meetup.com/pt-BR/Grupy-SP/events/242399278/" target="_blank"><i class="fa fa-check fa-2x"></i> 19/08/17</a>
+        </h5>
+        <h4>
+          <i class="fa fa-book fa-2x"></i>
+          <a href="https://github.com/cursodepythonoficial/flask_workshop" target="_blank">Material</a>
+        </h4>
+      </div>
+    </div>
+  </div><!-- /CONTENT PANEL -->
+
+  <div class="widget-footer"><!-- FOOTER PANEL-->
+    <div class="lfooter">
+      <i class="fa fa-book"></i>
+      <i class="fa fa-check fa"></i>
+      <i class="fa fa-meetup"></i>
+      <i class="fa fa-github"></i>
+    </div>
+    <div class="gfa">
+      <i class="fa fa-minus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-MINUS-CIRCLE"></i>
+      <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
+      <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
+      <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
+    </div>
+  </div><!-- /FOOTER PANEL-->
+
+</div><!-- /TYPE PANEL -->
 
 <!-- 09 Web Scraping -->
 
@@ -530,57 +580,6 @@
           <i class="fa fa-github fa-2x"></i>
           <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/web-scraping.md" target="_blank">
           <span>Web Scraping</span></a>
-        </h4>
-        <!-- <h5>
-          <i class="fa fa-meetup fa-2x"></i>
-          <a href="" target="_blank"> /17</a>
-        </h5>
-        <h4>
-          <i class="fa fa-book fa-2x"></i>
-          <a href="" target="_blank">Material</a>
-        </h4> -->
-      </div>
-    </div>
-  </div><!-- /CONTENT PANEL -->
-
-  <div class="widget-footer"><!-- FOOTER PANEL-->
-    <div class="lfooter">
-      <!-- <i class="fa fa-book"></i>
-      <i class="fa fa-meetup"></i> -->
-      <i class="fa fa-github"></i>
-    </div>
-    <div class="gfa">
-      <i class="fa fa-minus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-MINUS-CIRCLE"></i>
-      <i class="fa fa-pencil fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PENCIL"></i>
-      <i class="fa fa-search fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-SEARCH"></i>
-      <i class="fa fa-plus-circle fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-      <i class="fa fa-chevron-down fa-1x" data-toggle="tooltip" data-placement="right" title="" data-original-title="FA-PLUS-CIRCLE"></i>
-    </div>
-  </div><!-- /FOOTER PANEL-->
-
-</div><!-- /TYPE PANEL -->
-
-
-<!-- 10 Flask -->
-
-<div class="widget widget-gray"> <!-- TYPE PANEL -->
-  <div class="widget-trigger widget-head btn-black" data-target-id="10"> <!-- HEAD PANEL -->
-    <h4 class="mytitle">
-      <img src="img/flask_logo.png" alt="" height="30px">
-      <span class="lead">Flask</span>
-    </h4>
-  </div><!-- /HEAD PANEL -->
-
-  <div class="widget-body"> <!-- CONTENT PANEL -->
-    <div class="row">
-      <div class="col-md-3">
-        <img src="img/flask2.png" alt="">
-      </div>
-      <div class="col-md-9">
-        <h4>
-          <i class="fa fa-github fa-2x"></i>
-          <a class="mytitle" href="https://github.com/rg3915/fs2w/blob/master/flask.md" target="_blank">
-          <span>Flask</span></a>
         </h4>
         <!-- <h5>
           <i class="fa fa-meetup fa-2x"></i>
